# droniada2025_raporter

./: .gitignore  LICENSE  README.md  app.py  changes.json  cords.txt  droniada-2025-default-rtdb-points-export.json  firebase_key.json  local_map_processor.py  map_config.json  pdf_generator.py  push_point.py  pyproject.toml  requirements.txt  send_email.py
